--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
     "react-native-web": "~0.18.11",
-    "@expo/webpack-config": "^18.0.1"
+    "@expo/webpack-config": "^18.0.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-checkbox": "~2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
