--- a/app.json
+++ b/app.json
@@ -30,7 +30,8 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "photosPermission": "The app accesses your photos to let you share them with your friends.",
+          "cameraPermission": "Allow this app to access your camera"
         }
       ]
     ]
