--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.6",
+    "expo-checkbox": "~2.3.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.18.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
-    "react-native-web": "~0.18.11",
-    "@expo/webpack-config": "^18.0.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-checkbox": "~2.3.1"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
