--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-paper": "^5.5.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-web": "~0.18.11"
   },
